# maid

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: dependency-health.yml  release.yml
apps/maidd/: Cargo.toml  package-lock.json  package.json
apps/maidd/assets/: tailwind.css  tailwind.input.css
apps/maidd/src/: cli.rs  config.rs  engine.rs  engine_tail.rs  main.rs  mcp.rs  runtime.rs  service.rs  subagent.rs  task_commands.rs
apps/maidd/tests/: mcp_stdio_server.rs  mcp_tool_bridge.rs  plugin_tool_bridge.rs  skill_tool_bridge.rs
crates/channel-telegram/: Cargo.toml
crates/channel-telegram/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/skill-sdk/: Cargo.toml
crates/skill-sdk/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
migrations/: 001_create_tables.sql  002_indexes.sql  003_telegram_pairings.sql  004_plugin_ecosystem.sql  005_webhook_routes.sql
plugins/: registry.toml
plugins/echo/: .gitignore  Cargo.toml  plugin.toml  run.sh
plugins/echo/src/: main.rs
scripts/: check-deps.sh  dev.sh  new-plugin.sh  new-skill.sh  run-daemon.sh  run-serve.sh  smoke.sh
skills/: registry.toml
skills/echo/: run.sh  skill.toml
