[workspace]
members = [
  "apps/maidd",
  "crates/channel-telegram",
  "crates/core",
  "crates/plugin-sdk",
  "crates/storage",
  "crates/model",
  "crates/sandbox",
  "crates/scheduler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "process", "fs", "sync", "net", "io-util", "io-std"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
